--- a/Test/css/style.css
+++ b/Test/css/style.css
@@ -2826,6 +2826,18 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   font-size: 16px;
   line-height: 19.49px;
   text-transform: uppercase;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.block-download__btn:hover {
+  -webkit-box-shadow: 0 0 10px 0 #FCCF18 inset, 0 0 10px 4px #FCCF18;
+          box-shadow: 0 0 10px 0 #FCCF18 inset, 0 0 10px 4px #FCCF18;
+  background-color: #fff;
+  -webkit-transition: .3s;
+  transition: .3s;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
 }
 
 @media (min-width: 1440px) {
