--- a/Test/scss/layout/_main.scss
+++ b/Test/scss/layout/_main.scss
@@ -235,6 +235,14 @@
     font-size: 16px;
     line-height: 19.49px;
     text-transform: uppercase;
+    transition: .3s;
+
+    &:hover {
+      box-shadow: 0 0 10px 0 #FCCF18 inset, 0 0 10px 4px #FCCF18;
+      background-color: #fff;
+      transition: .3s;
+      transform: scale(.95);
+    }
 
     @include _1440 {
       max-width: 390px;
